# KF_RNN

./: .conda  .gitignore  Baseline.ipynb  Experimental vs. Analytical.ipynb  Hyperparameter Sweep.ipynb  Sample Complexity.ipynb  chat.txt  cursor_self_distillation_script_inquiry.md  cursor_self_distillation_script_refacto.md  cursor_test_time_training_for_lqe_probl.md  cursor_world_model_scheme_and_self_dist.md  freeze.txt  pyproject.toml  requirements.txt  sample_func.pt  sandbox.py
.ipynb_checkpoints/: requirements-checkpoint.txt
data/: observation_IR_2.pt  observation_IR_3.pt  val_upperTriA_gauss_C_tensor_dicts.pkl
docs/: init_pathway_findings.md  init_pathway_zeronoise_findings.md  mechanism_constant_gain_sd_findings.md  minimal_convergent_filter_findings.md  minimal_convergent_filter_proposal.md  nstep_sd_ladder_consolidated_findings.md  nstep_sd_ladder_launch_ainit_findings.md  nstep_sd_ladder_launch_ainit_mean_findings.md  nstep_sd_ladder_launch_findings.md  nstep_sd_ladder_zeronoise_consolidated_findings.md  posteriori_loss_sweep_findings.md  self_distillation_study_manifest.md  zero_measurement_noise_analytics_findings.md
infrastructure/: discrete_are.py  ensemble.py  experiment.py  fast_conv_scan.py  loader.py  records.py  settings.py  static.py  train.py  utils.py  validate.py
model/: analytical_kf.py  base.py  cnn_kf.py  copy_predictor.py  kf.py  least_squares_predictor.py  linear_system.py  linear_system_distribution.py  rnn_kf.py  sequential_kf.py  zero_predictor.py
notebooks/: Baseline.ipynb  IIR.ipynb  Time Test.ipynb  cdc_reconstruction.ipynb  (+1 more)
(+275 files in other folders)
