[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kf_rnn"
version = "0.1.0"
description = "Kalman filtering and RNN-based sequence prediction research code."
requires-python = ">=3.9"
dependencies = [
    "numpy==1.26.4",
    "matplotlib==3.9.2",
    "ipython==8.25.0",
    "torch~=2.4.0",
    "tensordict==0.5.0",
    "einops==0.8.0",
    "jupyter==1.0.0",
    "attrs~=23.1.0",
    "transformers~=4.45.2",
    "huggingface_hub==0.25.2",
    "control~=0.9.4",
    "netcdf4==1.7.1",
    "hydra-core>=1.3",
    "omegaconf>=2.3",
    "ecliseutils==0.1.0",
]

[tool.setuptools.packages.find]
where = ["src"]
